Fix preauth form button alignment
Some infighting in BS4's rows and columns. Some add postive margins, some add negative margins. When you get it right they balance out. Can't work out how to get right so have hacked it.

--- a/src/xsd_frontend/static/sass/_xsd-preauth.sass
+++ b/src/xsd_frontend/static/sass/_xsd-preauth.sass
@@ -154,9 +154,13 @@
 
   .xsd-preauth-form__controls
     @include make-row
+    // Has -15px margin either side from BS4, not really sure why. Removing here -- wjdp
+    margin-left: 0 !important
+    margin-right: 0 !important
 
     & > *
       @include make-col(6)
+
 
 .xsd-preauth-login__alternate
   // Login with email / New member? links
@@ -213,6 +217,8 @@ $email-exit-time: 0.22s
       transition: transform $email-entry-time cubic-bezier(0,0,0.3,1) // Slow entry
 
   .xsd-preauth-form__controls
+    a
+      color: $color-text-white
     .btn-secondary-outline
       opacity: 0.5
 
